jcc_files/alike.java
/* alike.java */
/* Generated By:JavaCC: Do not edit this line. alike.java */
package traductor;

//...

import lib.symbolTable.*;
import lib.attributes.*;
import lib.symbolTable.exceptions.*;
import java.util.ArrayList;
import lib.errores.*;
import lib.tools.SemanticFunctions;

public class alike implements alikeConstants {


        static SymbolTable st;

        private static void initSymbolTable() {
                boolean b;
                String[] palsRes = {
                "array","boolean","character","integer","procedure","if","then","elsif","else","end",
                        "while","loop","begin","ref","of","is","not","put_line","put","return","and","or",
                        "mod","skip_line","function","null","get","true","false","int2char","char2int"
                };

                st = new SymbolTable();

                st.insertReservedWords(palsRes);
        }

   public static void main(String[] args) {
           alike parser = null;
           SemanticFunctions sf = new SemanticFunctions();
           initSymbolTable();

           try {
                   if(args.length == 0) {
                           parser = new alike(System.in);
                   }
                   else {
                           parser = new alike(new java.io.FileInputStream(args[0]));
                   }
                   //Programa es el símbolo inicial de la gramática
                   parser.Programa();
                   System.out.println(st.toString());
                   //...
                   System.out.println("***** An\u00e1lisis terminado con \u00e9xito *****");
           }
           catch (java.io.FileNotFoundException e) {
                   System.err.println ("Fichero " + args[0] + " no encontrado.");
           }
           catch (TokenMgrError e) {
                   System.err.println("LEX_ERROR: " + e.getMessage());
           }
           catch (ParseException e) {
            System.err.println("PARSER_ERROR: " + e.getMessage());
        }
           //...
   }

//------------ Símbolo inicial de la gramática. Para análisis léxico no hace falta más
  static final public void Programa() throws ParseException {Token name;
        Attributes at = new Attributes();
    jj_consume_token(tPROC);
    name = jj_consume_token(tID);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case tAP:{
      jj_consume_token(tAP);
      parametros_formales(at);
      jj_consume_token(tCP);
      break;
      }
    default:
      jj_la1[0] = jj_gen;
      ;
    }
    jj_consume_token(tIS);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case tID:{
      declaracion_variables();
      break;
      }
    default:
      jj_la1[1] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case tPROC:
    case tFUNC:{
      label_1:
      while (true) {
        declaracion_procs_funcs();
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case tPROC:
        case tFUNC:{
          ;
          break;
          }
        default:
          jj_la1[2] = jj_gen;
          break label_1;
        }
      }
      break;
      }
    default:
      jj_la1[3] = jj_gen;
      ;
    }
    jj_consume_token(tBEGIN);
    instrucciones();
    jj_consume_token(tEND);
    jj_consume_token(tPC);
}

  static final public void declaracion_procedimiento() throws ParseException {Token name;
        Attributes att = new Attributes();
    name = cabecera_procedimiento(att);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case tID:{
      declaracion_variables();
      break;
      }
    default:
      jj_la1[4] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case tPROC:
    case tFUNC:{
      declaracion_procs_funcs();
      break;
      }
    default:
      jj_la1[5] = jj_gen;
      ;
    }
    jj_consume_token(tBEGIN);
    instrucciones();
    jj_consume_token(tEND);
    jj_consume_token(tPC);
System.err.println("Bloque" + name.image + "terminado \n" + st.toString());
                st.removeBlock();
}

  static final public void declaracion_funcion() throws ParseException {Attributes atType = new Attributes();
        Attributes atIsArray = new Attributes();
        Attributes atts = new Attributes();
        Token name;
    name = cabecera_funcion(atType,atIsArray,atts);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case tID:{
      declaracion_variables();
      break;
      }
    default:
      jj_la1[6] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case tPROC:
    case tFUNC:{
      declaracion_procs_funcs();
      break;
      }
    default:
      jj_la1[7] = jj_gen;
      ;
    }
    jj_consume_token(tBEGIN);

    instrucciones();
    jj_consume_token(tEND);
    jj_consume_token(tPC);
System.err.println("Bloque " + name.image + " terminado \n"+ st.toString());
                st.removeBlock();
                if(atType.type == Symbol.Types.ARRAY)
                {
                        {if (true) throw new ErrorSemantico("No se permiten funciones con retorno de vectores");}
                }
}

  static final public void declaracion_procs_funcs() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case tPROC:{
      declaracion_procedimiento();
      break;
      }
    case tFUNC:{
      declaracion_funcion();
      break;
      }
    default:
      jj_la1[8] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  static final public void instrucciones() throws ParseException {
    label_2:
    while (true) {
      instruccion();
      jj_consume_token(tPC);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case tIF:
      case tWHILE:
      case tPLINE:
      case tPUT:
      case tRETURN:
      case tSKIP:
      case tNULL:
      case tGET:
      case tID:{
        ;
        break;
        }
      default:
        jj_la1[9] = jj_gen;
        break label_2;
      }
    }
}

  static final public void declaracion_variables() throws ParseException {
    label_3:
    while (true) {
      declaracion_var();
      jj_consume_token(tPC);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case tID:{
        ;
        break;
        }
      default:
        jj_la1[10] = jj_gen;
        break label_3;
      }
    }
}

  static final public ArrayList<Symbol> declaracion_var() throws ParseException {Attributes atType = new Attributes();
        Attributes atIsArray = new Attributes();
        ArrayList<Token> tokens;
        ArrayList<Symbol> symbols = new ArrayList<Symbol>();
    tokens = lista_ids();
    jj_consume_token(tDP);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case tREF:{
      jj_consume_token(tREF);
atType.parClass = Symbol.ParameterClass.REF;
      break;
      }
    default:
      jj_la1[11] = jj_gen;
      ;
    }
    tipo_variable(atType,atIsArray);
if(atType.parClass==Symbol.ParameterClass.NONE)atType.parClass=Symbol.ParameterClass.VAL;
                        for(Token t : tokens)
                        {
                                Symbol S = null;



                                if(atType.type == Symbol.Types.BOOL) S = new SymbolBool(t.image, atType.parClass);
                                if(atType.type == Symbol.Types.CHAR) S = new SymbolChar(t.image, atType.parClass);
                                if(atType.type == Symbol.Types.INT) S = new SymbolInt(t.image, atType.parClass);
                                if(atType.type == Symbol.Types.ARRAY)
                                {
                                        S = new SymbolArray(t.image, atType.inicio,atType.fin,atIsArray.type,atType.parClass);
                                }

                                symbols.add(S);

                                try {
                                        st.insertSymbol(S);
                                } catch (AlreadyDefinedSymbolException e)
                                {
                                        System.err.println("Error semantico. Simbolo ya existente");
                                }
                        }

                        {if ("" != null) return symbols;}
    throw new Error("Missing return statement in function");
}

  static final public ArrayList<Token> lista_ids() throws ParseException {ArrayList<Token> tokens = new ArrayList<Token>();
        Token t;
    t = jj_consume_token(tID);
if(!st.isReservedWord(t.image))
                                {
                                        tokens.add(t);
                                }
                                else
                                {
                                        {if (true) throw new ErrorSemantico("ID no valido. Es una palabra reservada");}
                                }
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case tCOMA:{
        ;
        break;
        }
      default:
        jj_la1[12] = jj_gen;
        break label_4;
      }
      jj_consume_token(tCOMA);
      t = jj_consume_token(tID);
if(!st.isReservedWord(t.image)) tokens.add(t);
                                else {if (true) throw new ErrorSemantico("ID no valido. Es una palabra reservada");}
    }
System.err.println("Lista de ids ");
                        {if ("" != null) return tokens;}
    throw new Error("Missing return statement in function");
}

  static final public void lista_ids_o_string_o_inv(Attributes att) throws ParseException {Attributes at = new Attributes();
    expresion(at);
att.atts.add(at.clone());
                at = new Attributes();
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case tCOMA:{
        ;
        break;
        }
      default:
        jj_la1[13] = jj_gen;
        break label_5;
      }
      jj_consume_token(tCOMA);
      expresion(at);
att.atts.add(at.clone());
                at = new Attributes();
    }
att.type = att.atts.get(0).type;
                String _code="";
                for (Attributes a : att.atts)
                {
                        _code += a.code + ",";
                }
                att.code = _code;
                att.nivel = st.level;
}

  static final public Token cabecera_procedimiento(Attributes att) throws ParseException {Token name;
    jj_consume_token(tPROC);
    name = jj_consume_token(tID);
try {
                        Symbol S = new SymbolProcedure(name.image,att.parList);
                        st.insertSymbol(S);
                        st.insertBlock();
                }catch (AlreadyDefinedSymbolException ex)
                {
                        System.err.println("Error semantico. Simbolo ya existente");
                }
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case tAP:{
      jj_consume_token(tAP);
      parametros_formales(att);
      jj_consume_token(tCP);
      break;
      }
    default:
      jj_la1[14] = jj_gen;
      ;
    }
    jj_consume_token(tIS);
{if ("" != null) return name;}
    throw new Error("Missing return statement in function");
}

  static final public Token cabecera_funcion(Attributes atType,Attributes atIsArray,Attributes atts) throws ParseException {Token name;
    jj_consume_token(tFUNC);
    name = jj_consume_token(tID);
try{
                        Symbol S = new SymbolFunction(name.image,atts.parList,atType.type);
                        st.insertSymbol(S);
                        st.insertBlock();
                } catch (AlreadyDefinedSymbolException ex)
                {
                        System.err.println("Error semantico. Simbolo ya existente");
                }
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case tAP:{
      jj_consume_token(tAP);
      parametros_formales(atts);
      jj_consume_token(tCP);
      break;
      }
    default:
      jj_la1[15] = jj_gen;
      ;
    }
    jj_consume_token(tRETURN);
    tipo_variable(atType,atIsArray);
    jj_consume_token(tIS);
{if ("" != null) return name;}
    throw new Error("Missing return statement in function");
}

  static final public void parametros_formales(Attributes att) throws ParseException {ArrayList<Symbol> symbols;
    symbols = declaracion_var();
// try {
                        for(Symbol S : symbols)
                        {
                                att.parList.add(S);
                // 		st.insertSymbol(S);
                        }
                // } catch (AlreadyDefinedSymbolException ex)
                // {
                // 	System.err.println("Error semantico. Simbolo ya existente");
                // }

    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case tPC:{
        ;
        break;
        }
      default:
        jj_la1[16] = jj_gen;
        break label_6;
      }
      jj_consume_token(tPC);
      symbols = declaracion_var();
for(Symbol S : symbols)
                {
                        att.parList.add(S);
                        // st.insertSymbol(S);
                }
    }
}

  static final public void instruccion() throws ParseException {Attributes att = new Attributes();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case tGET:{
      inst_leer(att);
      break;
      }
    case tSKIP:{
      inst_saltar_linea(att);
      break;
      }
    case tPUT:{
      inst_escribir(att);
      break;
      }
    case tPLINE:{
      inst_escribir_linea(att);
      break;
      }
    case tID:{
      inst_invocacion_o_asignacion(att);
      break;
      }
    case tIF:{
      inst_if(att);
      break;
      }
    case tWHILE:{
      inst_while(att);
      break;
      }
    case tRETURN:{
      inst_return(att);
      break;
      }
    case tNULL:{
      inst_null(att);
      break;
      }
    default:
      jj_la1[17] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  static final public void inst_leer(Attributes att) throws ParseException {
    jj_consume_token(tGET);
    jj_consume_token(tAP);
    lista_ids();
    jj_consume_token(tCP);
System.err.println("Expresion: " + att);
}

  static final public void inst_saltar_linea(Attributes att) throws ParseException {
    jj_consume_token(tSKIP);
System.err.println("Expresion: " + att);
}

  static final public void inst_escribir(Attributes att) throws ParseException {
    jj_consume_token(tPUT);
    jj_consume_token(tAP);
    lista_ids_o_string_o_inv(att);
    jj_consume_token(tCP);
System.err.println("Expresion: " + att);
}

  static final public void inst_escribir_linea(Attributes att) throws ParseException {
    jj_consume_token(tPLINE);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case tAP:{
      jj_consume_token(tAP);
      lista_ids_o_string_o_inv(att);
      jj_consume_token(tCP);
      break;
      }
    default:
      jj_la1[18] = jj_gen;
      ;
    }
System.err.println("Expresion: " + att);
}

  static final public void inst_invocacion_o_asignacion(Attributes att) throws ParseException {Attributes at = new Attributes();
        Attributes at2 = new Attributes();
        Token t;
System.err.println("Invocacion o asignacion");
    t = jj_consume_token(tID);
Symbol S = st.getSymbol(t.image);
                System.err.println("Encontrado " + S);
                        // System.err.println("Token id " + t.image);
                        // System.err.println("Function call");
                at2.type = S.type;
                at2.code = (t.image);
                at2.nivel = st.level;
                att.atts.add(at2.clone());
                at = new Attributes();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case tAP:{
      jj_consume_token(tAP);
      function_call(at);
att.code = at.code;
                att.atts.add(at.clone());
                at = new Attributes();
      jj_consume_token(tCP);
      break;
      }
    default:
      jj_la1[19] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case tASIG:{
      jj_consume_token(tASIG);
      expresion(at);
att.atts.add(at.clone());
                at = new Attributes();
      break;
      }
    default:
      jj_la1[20] = jj_gen;
      ;
    }
String _code="";
                int size = att.atts.size();
                for (int i = 0; i < size; i++) {
                        Attributes a = att.atts.get(i);
                        _code += a.code;
                        if (i < size - 1) { // if this is not the last element
                                _code += ",";
                        }
                }
                att.code = _code;
                att.type = att.atts.get(0).type;
                System.err.println("Expresion/es de inv o asignacion: " + att);
}

// void inv_funcion(Attributes att):
// {
// 	Attributes at = new Attributes();
// }
// {
// 	(expresion(at) 
// 	{
// 		att.atts.add(at.clone());
// 	}
// 	(<tCOMA> expresion(at)
// 	{
// 		att.atts.add(at.clone());
// 	}
// 	)*)
// 	{System.err.println("Expresion/es de inv a funcion: " + att);}
// }
  static final public 
void inst_if(Attributes att) throws ParseException {Attributes at = new Attributes();
    jj_consume_token(tIF);
    expresion(at);
att.atts.add(at.clone());
                at = new Attributes();
    jj_consume_token(tTHEN);
    instrucciones();
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case tELSIF:{
        ;
        break;
        }
      default:
        jj_la1[21] = jj_gen;
        break label_7;
      }
      jj_consume_token(tELSIF);
      expresion(at);
att.atts.add(at.clone());
                at = new Attributes();
      jj_consume_token(tTHEN);
      instrucciones();
    }
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case tELSE:{
      jj_consume_token(tELSE);
      instrucciones();
      break;
      }
    default:
      jj_la1[22] = jj_gen;
      ;
    }
    jj_consume_token(tENDIF);
String _code="";
                int size = att.atts.size();
                for (int i = 0; i < size; i++) {
                        Attributes a = att.atts.get(i);
                        _code += a.code;
                        if (i < size - 1) { // if this is not the last element
                                _code += ",";
                        }
                }
                att.code = _code;
                System.err.println("Expresion/es de ifs condiciones: " + att);
}

  static final public void inst_while(Attributes att) throws ParseException {Attributes at = new Attributes();
    jj_consume_token(tWHILE);
    expresion(at);
att.type = at.type;
                att.atts.add(at.clone());
                at = new Attributes();
                String _code="";
                int size = att.atts.size();
                for (int i = 0; i < size; i++) {
                        Attributes a = att.atts.get(i);
                        _code += a.code;
                        if (i < size - 1) { // if this is not the last element
                                _code += ",";
                        }
                }
                att.code = _code;
    jj_consume_token(tLOOP);
    instrucciones();
    jj_consume_token(tENDLOOP);
System.err.println("Expresion while condicion: " + att);
}

  static final public void inst_return(Attributes att) throws ParseException {Attributes at = new Attributes();
    jj_consume_token(tRETURN);
    expresion(at);
att.atts.add(at.clone());
                at = new Attributes();
}

  static final public void inst_null(Attributes att) throws ParseException {
    jj_consume_token(tNULL);
System.err.println("Expresion null");
}

  static final public void expresion(Attributes att) throws ParseException {Boolean esBool = false;
    relacion(att);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case tAND:
    case tOR:{
      label_8:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case tAND:{
          jj_consume_token(tAND);
          break;
          }
        case tOR:{
          jj_consume_token(tOR);
          break;
          }
        default:
          jj_la1[23] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
att.type = Symbol.Types.BOOL;
                esBool = true;
        relacion(att);
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case tAND:
        case tOR:{
          ;
          break;
          }
        default:
          jj_la1[24] = jj_gen;
          break label_8;
        }
      }
      break;
      }
    default:
      jj_la1[25] = jj_gen;
      ;
    }
// ( 2+3+4) + 5 + (2+3)
                // Expresion
                //  (2+3+4)
                //   5
                //  (2+3)
                if(esBool)
                {
                        // for(Attributes a : att.atts)
                        // {
                        // 	if(a.type!=Symbol.Types.BOOL)
                        // 	{
                        // 		throw new ErrorSemantico("Error de tipos");
                        // 	}
                        // }
                } else {
                        att.type = att.atts.get(0).type;
                }
                String _code="";
                int size = att.atts.size();
                for (int i = 0; i < size; i++) {
                        Attributes a = att.atts.get(i);
                        _code += a.code;
                        if (i < size - 1) { // if this is not the last element
                                _code += ",";
                        }
                }
                att.code = _code;
}

  static final public void relacion(Attributes att) throws ParseException {//Attributes atTypes = new Attributes();
        Boolean tieneOp = false;
    expresion_simple(att);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case tGE:
    case tLE:
    case tNEQ:
    case tEQ:
    case tGT:
    case tLS:{
      operador_relacional();
tieneOp = true;
      expresion_simple(att);
      break;
      }
    default:
      jj_la1[26] = jj_gen;
      ;
    }
if(tieneOp)
                {
                        att.type = Symbol.Types.BOOL;
                }
}

  static final public void operador_relacional() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case tEQ:{
      jj_consume_token(tEQ);
      break;
      }
    case tLS:{
      jj_consume_token(tLS);
      break;
      }
    case tGT:{
      jj_consume_token(tGT);
      break;
      }
    case tLE:{
      jj_consume_token(tLE);
      break;
      }
    case tGE:{
      jj_consume_token(tGE);
      break;
      }
    case tNEQ:{
      jj_consume_token(tNEQ);
      break;
      }
    default:
      jj_la1[27] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}
